# SpecSem

./: .gitignore  README.md  kdtree.cpp
KDTree/: CMakeLists.txt  Makefile  a.out  dkdtree.h  kdtree.cpp  kdtree.h  main.out  make_dirs  prog  result_mpi_polus.csv  sample.cpp  test3d.cpp  test_polus  test_polus_add  tree.cpp  tree_visualize.cpp
KDTree/built/: CMakeCache.txt  Makefile  cmake_install.cmake  kdtree  result_mpi_polus.csv  test
KDTree/data/: data_rebuild.ipynb
KDTree/err_files/1000/: 15.err  16.err  2.err  3.err  31.err  32.err  4.err  7.err  8.err
KDTree/err_files/10000/: 15.err  16.err  2.err  3.err  31.err  32.err  4.err  7.err  8.err
KDTree/err_files/100000/: 15.err  16.err  2.err  3.err  31.err  32.err  4.err  7.err  8.err
KDTree/err_files/d/: 15.err  16.err  2.err  3.err  31.err  32.err  4.err  7.err  8.err
KDTree/err_files/f/: 15.err  16.err  2.err  3.err  31.err  32.err  4.err  7.err  8.err
KDTree/main/: kdtree.h  prog  result_mpi_local.csv  result_mpi_polus.csv  test_local  test_polus  test_polus_add  tree.cpp
KDTree/out_files/1000/: 1.out  15.out  16.out  2.out  3.out  31.out  32.out  4.out  7.out  8.out
KDTree/out_files/10000/: 1.out  15.out  16.out  2.out  3.out  31.out  32.out  4.out  7.out  8.out
KDTree/out_files/100000/: 1.out  15.out  16.out  2.out  3.out  31.out  32.out  4.out  7.out  (+1 more)
KDTree/results/: analytics.ipynb  result_mpi_local.xlsx  result_mpi_polus.xlsx  result_mpi_polus_2.xlsx  result_mpi_polus_3.xlsx  test.xlsx  ~$result_mpi_polus_3.xlsx
KDTree/tmp/: a.out  cmake_compile.txt  sample.cpp  show.cpp  tmp  tmp.cpp
(+193 files in other folders)
